--- a/core/docker-compose.yml
+++ b/core/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       - ./:/core:rw
     command: /bin/sh -c "while true; do sleep 100000; done"
   core-db:
-    image: "mariadb:latest"
+    image: "mariadb:10.10-jammy"
     environment:
       - MARIADB_ROOT_PASSWORD=aldim
       - MARIADB_DATABASE=core
