--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,15 +40,15 @@ services:
     command: /bin/sh -c "while true; do sleep 100000; done"
     ports:
       - "5656:5656"
-  frontend:
-    build: ./frontend
-    volumes:
-      - ./frontend:/frontend:rw
-    depends_on:
-      - core
-      - kms
-    ports:
-      - "3000:3000"
+  # frontend:
+  #   build: ./frontend
+  #   volumes:
+  #     - ./frontend:/frontend:rw
+  #   depends_on:
+  #     - core
+  #     - kms
+  #   ports:
+  #     - "3000:3000"
   # solr:
   #   image: "solr:9.2.0"
   #   ulimits:
@@ -61,8 +61,8 @@ services:
   #     - "8983:8983"
   #   user: root 
   #   command: bash -c "chown -R 8983:8983 /var/solr && runuser -u solr -- solr-foreground"
-  tika:
-    image: "apache/tika:2.7.0.1-full"
-    ports:
-      - "9998:9998"
-    restart: always
+  # tika:
+  #   image: "apache/tika:2.7.0.1-full"
+  #   ports:
+  #     - "9998:9998"
+  #   restart: always
