--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,13 +10,21 @@
   },
   "dependencies": {
     "autoprefixer": "10.4.14",
-    "eslint": "8.43.0",
     "eslint-config-next": "13.4.7",
+    "i": "^0.3.7",
     "next": "13.4.13",
     "next-auth": "^4.22.1",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.2"
+  },
+  "devDependencies": {
+    "eslint": "^8.47.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-plugin-import": "^2.28.0",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
+    "eslint-plugin-react": "^7.33.1",
+    "eslint-plugin-react-hooks": "^4.6.0"
   }
 }
