--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,15 +40,15 @@ services:
     command: /bin/sh -c "while true; do sleep 100000; done"
     ports:
       - "5656:5656"
-  # frontend:
-  #   build: ./frontend
-  #   volumes:
-  #     - ./frontend:/frontend:rw
-  #   depends_on:
-  #     - core
-  #     - kms
-  #   ports:
-  #     - "3000:3000"
+  frontend:
+    build: ./frontend
+    # volumes:
+    #   - ./frontend:/frontend:rw
+    depends_on:
+      - core
+      - kms
+    ports:
+      - "3000:3000"
   # solr:
   #   image: "solr:9.2.0"
   #   ulimits:
