--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,11 +12,12 @@
     "autoprefixer": "10.4.14",
     "eslint-config-next": "13.4.7",
     "i": "^0.3.7",
-    "next": "13.4.12",
+    "next": "13.4.18",
     "next-auth": "^4.22.1",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.10.1",
     "react-toastify": "^9.1.3",
     "tailwindcss": "3.3.2"
   },
