--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,7 +19,8 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
     "react-toastify": "^9.1.3",
-    "tailwindcss": "3.3.2"
+    "tailwindcss": "3.3.2",
+    "timezones-list": "^3.0.2"
   },
   "devDependencies": {
     "eslint": "^8.47.0",
