--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "autoprefixer": "10.4.14",
     "eslint-config-next": "13.4.7",
     "i": "^0.3.7",
+    "luxon": "^3.4.2",
     "next": "13.4.18",
     "next-auth": "^4.22.1",
     "postcss": "8.4.24",
