--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@grapesjs/react": "^1.0.0",
     "@hookform/resolvers": "^3.3.1",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-alert-dialog": "^1.0.4",
@@ -26,6 +27,8 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "eslint-config-next": "13.4.7",
+    "grapesjs": "^0.21.7",
+    "grapesjs-preset-webpage": "^1.0.3",
     "i": "^0.3.7",
     "lucide-react": "^0.277.0",
     "luxon": "^3.4.2",
