--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,7 +33,7 @@
     "i": "^0.3.7",
     "lucide-react": "^0.277.0",
     "luxon": "^3.4.2",
-    "next": "^13.5.3",
+    "next": "^13.5.5-canary.4",
     "next-auth": "^4.22.1",
     "postcss": "8.4.24",
     "react": "^18.2.0",
