--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,7 +29,19 @@
     "eslint-config-next": "13.4.7",
     "grapesjs": "^0.21.7",
     "grapesjs-blocks-basic": "^1.0.2",
+    "grapesjs-component-countdown": "^1.0.2",
+    "grapesjs-custom-code": "^1.0.2",
+    "grapesjs-parser-postcss": "^1.0.3",
+    "grapesjs-plugin-ckeditor": "^1.0.1",
+    "grapesjs-plugin-forms": "^2.0.6",
     "grapesjs-preset-webpage": "^1.0.3",
+    "grapesjs-style-bg": "^2.0.2",
+    "grapesjs-style-filter": "^1.0.2",
+    "grapesjs-style-gradient": "^3.0.3",
+    "grapesjs-tabs": "^1.0.6",
+    "grapesjs-tui-image-editor": "^1.0.2",
+    "grapesjs-typed": "^2.0.1",
+    "grapick": "^0.1.13",
     "i": "^0.3.7",
     "lucide-react": "^0.277.0",
     "luxon": "^3.4.2",
