--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -61,20 +61,20 @@ services:
   #       condition: service_healthy
   #   ports:
   # #     - "3000:3000"
-  # solr:
-  #   image: "solr:9.2.0"
-  #   ulimits:
-  #     nofile:
-  #       soft: 65000
-  #       hard: 65000
-  #   volumes:
-  #     - ./solr:/var/solr
-  #   ports:
-  #     - "8983:8983"
-  #   user: root 
-  #   command: bash -c "chown -R 8983:8983 /var/solr && runuser -u solr -- solr-foreground"
-  # tika:
-  #   image: "apache/tika:2.7.0.1-full"
-  #   ports:
-  #     - "9998:9998"
-  #   restart: always
+  solr:
+    image: "solr:9.2.0"
+    ulimits:
+      nofile:
+        soft: 65000
+        hard: 65000
+    volumes:
+      - ./solr:/var/solr
+    ports:
+      - "8983:8983"
+    user: root 
+    command: bash -c "chown -R 8983:8983 /var/solr && runuser -u solr -- solr-foreground"
+  tika:
+    image: "apache/tika:2.7.0.1-full"
+    ports:
+      - "9998:9998"
+    restart: always
