--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "autoprefixer": "10.4.14",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "cookies-next": "^4.0.0",
     "eslint-config-next": "13.4.7",
     "grapesjs": "^0.21.7",
     "grapesjs-blocks-basic": "^1.0.2",
