change dockerfile a bit

--- a/core/Dockerfile
+++ b/core/Dockerfile
@@ -3,5 +3,7 @@ FROM golang:1.20rc3-bullseye
 WORKDIR /core
 #Workdir set as core
 COPY . .
+RUN go mod download
+RUN go build -o core-app
 EXPOSE 6565
-CMD go run .
+CMD ["./core-app"]
