--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,9 @@ services:
       test: ["CMD-SHELL", "mysqladmin ping -h localhost -u root -p$${MARIADB_ROOT_PASSWORD}"]
       interval: 30s
       timeout: 10s
-      retries: 100
+      retries: 1000
+    volumes:
+      - ./core_db/:/var/lib/mysql:z
   core:
     image: ghcr.io/smam-tech/core:v1
     depends_on:
@@ -25,6 +27,7 @@ services:
       retries: 100
     ports:
       - "6565:6565"
+    restart: always
   kms-db:
     image: "mariadb:10.10-jammy"
     environment:
@@ -34,7 +37,9 @@ services:
       test: ["CMD-SHELL", "mysqladmin ping -h localhost -u root -p$${MARIADB_ROOT_PASSWORD}"]
       interval: 30s
       timeout: 10s
-      retries: 100
+      retries: 1000
+    volumes:
+      - ./kms_db/:/var/lib/mysql:z
   kms:
     image: ghcr.io/smam-tech/kms:v1
     depends_on:
@@ -53,6 +58,7 @@ services:
       retries: 100
     ports:
       - "5656:5656"
+    restart: always
   frontend:
     image: ghcr.io/smam-tech/frontend:v1
     depends_on:
@@ -62,6 +68,11 @@ services:
         condition: service_healthy
     ports:
       - "3000:3000"
+    environment:
+      - core_link=http://core:6565
+      - core_password:aldim
+      - kms_link=http://kms:6565
+      - kms_password:aldim
   solr:
     image: ghcr.io/smam-tech/kms-solr:v1
     environment:
