--- a/kms/Dockerfile
+++ b/kms/Dockerfile
@@ -1,24 +1,7 @@
-# Stage 1: Build the Go application
-FROM golang:1.20rc3-bullseye AS builder
+FROM golang:1.20rc3-bullseye
+#Using go version 1.20 with debian bullseye as OS
 WORKDIR /kms
+#Workdir set as core
 COPY . .
-RUN go mod download
-RUN go build -o kms-app
-
-# Stage 2: Create a smaller image with the binary and necessary files
-FROM debian:bullseye-slim
-WORKDIR /app
-
-#INSTALL CURL FOR HEALTHCHECK
-RUN apt-get update && apt-get install -y curl
-
-# Copy the binary built in the previous stage
-COPY --from=builder /kms/kms-app /app/
-
-# Copy the necessary files from the ./config directory
-COPY --from=builder /kms/config/ /app/config/
-
 EXPOSE 5656
-
-# Specify the command to run the application
-CMD ["./kms-app"]
+CMD go run .
