--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -73,6 +73,7 @@ services:
     image: "solr:9.2.0"
     environment:
       - SOLR_HEAP=4g
+      - SOLR_MODULES=analysis-extras
     ulimits:
       nofile:
         soft: 65000
